--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "swiper": "^8.4.5"
   }
 }
